# atlasmancer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
atlasmancer/: __init__.py  campaign_loader.py  cli.py  generator.py
atlasmancer/renderers/: campaign.py  html.py  png.py
docs/: ATLASMANCER_V0.3_SPEC.md  BRAND.md  DECISIONS.md  DEPLOYMENT_STRATEGY.md  RENAME_PLAN.md  ROADMAP.md
examples/: example-campaign.json
locales/: en.json  es.json
tests/: test_campaign.py  test_campaign_loader.py  test_generator.py  test_geography.py  test_renderers.py
world_forge/: __init__.py  cli.py  generator.py
world_forge/renderers/: __init__.py  html.py  png.py
