[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "world-forge"
version = "0.1.0"
description = "A tiny deterministic ASCII world generator for terminal explorers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "capfroggy" }
]
keywords = ["ascii", "worldbuilding", "procedural-generation", "cli", "terminal"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/capfroggy/world-forge"
Repository = "https://github.com/capfroggy/world-forge"
Issues = "https://github.com/capfroggy/world-forge/issues"

[project.scripts]
world-forge = "world_forge.cli:main"

[tool.setuptools.packages.find]
include = ["world_forge*"]
